# OfficeCli-rust

./: .gitignore  Makefile
.github/workflows/: build.yml
crates/docx-handler/src/: add.rs  dom_types.rs  handler.rs  helpers.rs  html_preview.rs  lib.rs  mutations.rs  navigation.rs  para_id.rs  query.rs  raw.rs  text_offset.rs  view.rs
crates/handler-common/src/: document_handler.rs  document_issue.rs  document_node.rs  insert_position.rs  lib.rs  output_format.rs  path_aliases.rs  path_segment.rs  selector.rs  text_map.rs  validation_error.rs
crates/officecli/: Cargo.toml
crates/officecli/src/: main.rs  mcp.rs  output.rs  resident.rs  watch.rs
crates/officecli/src/commands/: add.rs  batch.rs  create.rs  dump.rs  extract_text.rs  get.rs  info.rs  mod.rs  move_element.rs  query.rs  raw.rs  raw_set.rs  remove.rs  save.rs  set.rs  validate.rs  view.rs
crates/oxml/src/: content_types.rs  lib.rs  namespace.rs  package.rs  part.rs  rels.rs  validate.rs  xml_util.rs
crates/pdf-handler/: Cargo.toml
crates/pdf-handler/src/: content_stream.rs  handler.rs  html_preview.rs  lib.rs  modifier.rs  navigation.rs  reader.rs  render.rs  text_extract.rs  text_offset.rs  view.rs
crates/pptx-handler/src/: add.rs  dom_types.rs  handler.rs  html_preview.rs  lib.rs  mutations.rs  navigation.rs  query.rs  raw.rs  svg_preview.rs  text_offset.rs  view.rs
crates/xlsx-handler/src/: add.rs  dom_types.rs  formula_eval.rs  handler.rs  helpers.rs  html_preview.rs  (+7 more)
examples/word/: formulas.docx  numbering-showcase.docx
skills/officecli/: SKILL.md
skills/officecli-pdf/: SKILL.md
